additionalconfiguration/example-service-clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: example-service-internal
spec:
  selector:
    app: example-service
  ports:
  - port: 80
    targetPort: http
    name: http
  type: ClusterIP  # Default service type for internal access
