additionalconfiguration/example-service-nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
  name: example-service-nodeport  # Ensure this is your NodePort service
  labels:
    app: example-service
    access: node
spec:
  selector:
    app: example-service
  ports:
  - port: 80
    targetPort: http
    nodePort: 30080  # Your existing NodePort
    name: http
  type: NodePort
